--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="work-sans-font">
    <header class="bg-light">
     <nav class="navbar display-flex">
-        <h3 class="brand">G3 Architects</h3>
+        <h5 class="brand">G3 Architects</h5>
         <ul class="nav-links display-flex">
             <!-- li.nav-item*4>a.nav-link -->
             <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
@@ -29,5 +29,59 @@
         </div>
     </nav>
    </header>
+   <main>
+    <!-- team section start -->
+    <section class="teams display-flex">
+
+        <div class="team-img-container">
+            <img src="images/team1.png" alt="two architect discussing about design">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+
+        </div>
+        <div class="our-features">
+            <h3 class="section-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="or">Features</span></h3>
+            <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+
+
+        </div>
+
+    </section>
+    <!-- feature will enjoy -->
+     <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+        <div class="facts-container">
+            <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+        </div>
+     </section>
+     <!-- some facts -->
+      <section class="some-facts">
+
+      </section>
+   </main>
 </body>
 </html>
