--- a/index.html
+++ b/index.html
@@ -152,8 +152,12 @@
       </section>
    </main>
    <div>
-    <footer>
-        All rights reserved copyright@2023 startup landing page design
+    <footer class="footer">
+        <!-- <footer>
+  <p>Author: Hege Refsnes<br>
+  <a href="mailto:hege@example.com">hege@example.com</a></p>
+</footer> -->
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
    </div>
 </body>
